[package]
name = "circulate"
version = "0.2.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Lightweight async PubSub framework."
repository = "https://github.com/khonsulabs/circulate"
license = "MIT OR Apache-2.0"
keywords = ["pubsub"]
categories = ["asynchronous"]
readme = "./README.md"

[dependencies]
flume = "0.10.11"
serde = { version = "1.0.136", features = ["derive"] }
pot = "1.0.1"
futures = "0.3.21"
async-lock = "2.5.0"
arc-bytes = "0.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.29"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = "1.16.0", features = ["sync", "macros", "rt"] }

[dev-dependencies]
anyhow = "1.0.55"
tokio = { version = "1.16.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
] }
