[package]
name = "circulate"
version = "0.5.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Lightweight PubSub framework that supports both sync and async"
repository = "https://github.com/khonsulabs/circulate"
license = "MIT OR Apache-2.0"
keywords = ["pubsub"]
categories = ["asynchronous"]
readme = "./README.md"

[dependencies]
flume = { version = "0.11", default-features = false, features = ["async"] }
serde = { version = "1.0.136", features = ["derive"] }
pot = "3.0.0"
futures = "0.3.21"
parking_lot = "0.12.0"
arc-bytes = "0.3.3"

[dev-dependencies]
anyhow = "1.0.55"
tokio = { version = "1.16.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
] }
